--- a/README
+++ b/README
@@ -9,15 +9,15 @@ more details @http://lostjs.com/2012/02/04/use-pathogen-and-git-to-manage-vimfil
   bundle/vim-supertab 
 
 --------------
-1 update plugin 
-  single plugin updating, change dir to targit plugin dir: git checkout master; git pull
-  all plugin updating: git submodule foreach 'git checkout master && git pull'
+1 更新插件
+  更新单个插件: git checkout master; git pull
+  更新所有插件: git submodule foreach 'git checkout master && git pull'
 
-2 del plugin 
-  rm -rf bundle/plugin
-  git rm -r bundle/plugin
+2 删除插件
+  rm -rf bundle/插件名
+  git rm -r bundle/插件名
 
-3 init plugin 
+3 安装 
   git submodule add plugin_repository_in_git bundle/plugin_name
-  example aboubt supertabr: git submodule add git@github.com:ervandew/supertab.git bundle/vim_supertab
+  样例——安装supertab: git submodule add git@github.com:ervandew/supertab.git bundle/vim_supertab
 
